@@ -1,8 +1,9 @@
           CHANGES IN SOUNDGEN VERSION 1.3.2 [...Date...]
 MINOR:
-  * soundgen(): fixed a bug that prevented proper control of pitch drift with pitchDriftDep
+  * analyze(), analyzeFolder(), segment(), segmentFolder(), spectrogram(), spectrogramFolder(): support for mp3 files in addition to wav
   * analyze(): pitch candidates based on lowest dominant frequency band ("dom") respect pitchCeiling
   * analyze(): fixed a bug with plotting symbols for pitch candidates in plot legend
+  * soundgen(): fixed a bug that prevented proper control of pitch drift with pitchDriftDep
 
 
           CHANGES IN SOUNDGEN VERSION 1.3.1 [04-October-2018]
